Se crea el form de posts

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -150,3 +150,5 @@
         <button type="button" pButton (click)="register();" label="Registrarme" class="ui-button-success" [disabled]="!registerForm.valid"></button>
     </p-footer>
 </p-dialog>
+
+<ngx-ui-loader></ngx-ui-loader>
