--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,3 +1,5 @@
+
+/*
 .car-details {
     display: flex;
     justify-content: space-between;
@@ -61,3 +63,4 @@
         text-align: center;
     }
 }
+*/
