--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,146 +1,81 @@
-<form [formGroup]="registerForm">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <a class="navbar-brand" href="#">Tu Red Social</a>
-          
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-              <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item active">
-                  <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Mis Posts</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Perfil</a>
-                </li>
-              </ul>
-              <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Buscar Post" aria-label="Buscar">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
-              </form>
-            </div>
-          </nav>
-      </div>
-      <div class="col-md-12">
-        <div class="card">
-          <div class="card-header">
-            ¿Que estás pensando?
-          </div>
-          <div class="card-body">
-            <div class="row">
-              <div class="col-md-12">
-                <div class="form-group">
-                  <label>Título</label>
-                  <input 
-                      type="text" 
-                      class="form-control" 
-                      formControlName="title" 
-                      [ngClass]="{ 'is-invalid': title.invalid && (title.dirty || title.touched) }"
-                      [(ngModel)]="ipost.title"
-                      placeholder="Ingrese un título">
-                </div>
-              </div>
-              <div class="col-md-12">
-                <div class="form-group">
-                  <textarea 
-                    class="form-control" 
-                    rows="3"
-                    formControlName="body"
-                    [(ngModel)]="ipost.body"
-                    [ngClass]="{ 'is-invalid': body.invalid && (body.dirty || body.touched) }"></textarea>
-                </div>
-              </div>
-              <div class="col-md-12">                
-                <div class="form-group" style="text-align: right;">
-                  <input type="file" #file placeholder="Choose file" (change)="uploadFile(file.files)" style="display:none;" multiple>
-                  <button 
-                    pButton 
-                    pRipple 
-                    type="button" 
-                    icon="pi pi-image" 
-                    (click)="file.click()"
-                    class="p-button-rounded p-button-secondary">
-                  </button>
-                  <br>
-                  <br>
-                  <div class="row">
-                    <div class="col-md-12">
-                      <img [src]="ipost.url" alt="" width="100%" height="500"  class="img-fluid rounded">
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <br>
-            <div class="row">
-              <div class="col-md-12" style="text-align: right;">
-                <button 
-                  pButton 
-                  pRipple 
-                  type="button" 
-                  label="Publicar" 
-                  (click)="register();" 
-                  class="p-button-rounded p-button-info" 
-                  [disabled]="!registerForm.valid"></button>                  
-              </div>
-            </div>
-          </div>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand" href="#">Tu Red Social</a>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Mis Posts</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Perfil</a>
+            </li>
+          </ul>
+          <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Buscar Post" aria-label="Buscar">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="button">Buscar</button>
+          </form>
         </div>
-      </div>
-    </div>
-
-    <div class="row justify-content-center">
-      <div class="col-md-12" style="text-align: center;">
-        <div 
-          class="search-results"
-          infiniteScroll
-          [infiniteScrollDistance]="2"
-          [infiniteScrollThrottle]="50"
-          (scrolled)="onScroll()">
-          
-          <div class="card shadow" *ngFor="let post of liPosts">
-            <div class="card-body">
-              <h5 class="card-title text-left">{{ post.title }}</h5>
-              <div class="col-md-12" style="text-align: justify;">
-                {{ post.body }}
-              </div>
-              <div class="col-md-12" *ngIf="post.isVisible">
-                <img [src]="post.url" alt="" width="100%" height="500"  class="img-fluid rounded">
-              </div>
-              <br>            
-              <div class="card-footer">
-                creado: {{ post.created_at | date }}
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- sinner -->
-        <div class="row pb-5">
-          <div class="col-md-12 p-5">
-            <ngx-spinner
-            bdOpacity = 0.9
-            bdColor = ""
-            size = "default"
-            color = "#581f87"
-            type = "ball-pulse-sync"
-            [fullScreen] = "false"
-            >
-            </ngx-spinner>
-          </div>
-        </div>
-      </div>
+      </nav>
     </div>
   </div>
-
-
-
-</form>
+  <div class="row">
+    <div class="col-md-12">
+      <app-createposts (postsAll)="getpostsAll()"></app-createposts>
+    </div>
+    <br>
+    <div class="col-md-12">
+      <div class="row justify-content-center">
+        <div class="col-md-12">
+          <div 
+            class="search-results"
+            infiniteScroll
+            [infiniteScrollDistance]="2"
+            [infiniteScrollThrottle]="50"
+            (scrolled)="onScroll()">
+            
+            <div class="card shadow" *ngFor="let post of liPosts">
+              <div class="card-body">
+                <h5 class="card-title text-left">{{ post.title }}</h5>
+                <div class="col-md-12" style="text-align: justify;">
+                  {{ post.body }}
+                </div>
+                <div class="col-md-12" *ngIf="post.isVisible">
+                  <img [src]="post.url" alt="" width="100%" height="500"  class="img-fluid rounded">
+                </div>
+                <br>            
+                <div class="card-footer">
+                  creado: {{ post.created_at | date }}
+                </div>
+              </div>
+            </div>
+          </div>
+    
+          <div class="row pb-5">
+            <div class="col-md-12 p-5">
+              <ngx-spinner
+              bdOpacity = 0.9
+              bdColor = ""
+              size = "default"
+              color = "#581f87"
+              type = "ball-pulse-sync"
+              [fullScreen] = "false"
+              >
+              </ngx-spinner>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>  
+</div>
 
 <ngx-ui-loader></ngx-ui-loader>
 <p-toast></p-toast>
