--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -12,16 +12,16 @@
               <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Mis Posts</a>
+              <a class="nav-link" [routerLink]="['/login']">Cerrar sessión</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="#">Perfil</a>
-            </li>
+            </li> -->
           </ul>
-          <form class="form-inline my-2 my-lg-0">
+          <!-- <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Buscar Post" aria-label="Buscar">
             <button class="btn btn-outline-success my-2 my-sm-0" type="button">Buscar</button>
-          </form>
+          </form> -->
         </div>
       </nav>
     </div>
